CR remarks